force-app/main/default/objects/Workshop_Request__c/Workshop_Request__c.object-meta.xml
<CustomObject>
    <label>Workshop Request</label>
    <nameField>
        <displayFormat>WRN-{000000}</displayFormat>
        <label>Workshop Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workshop Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>