force-app/main/default/objects/Workshop_Request__c/fields/Preferred_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Workshop__c</fullName>
    <label>Preferred Workshop</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lightning Flow - Flow Builders</fullName>
            </value>
            <value>
                <fullName>Build Without Code</fullName>
            </value>
            <value>
                <fullName>Build With Code</fullName>
            </value>
            <value>
                <fullName>Lightning Adoption - Readiness Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>