force-app/main/default/objects/Workshop_Request__c/fields/SE_Lead_for_HOW__c.field-meta.xml
<CustomField>
    <fullName>SE_Lead_for_HOW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE Lead for HOW</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Workshop_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>