force-app/main/default/objects/Workshop_Request__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:30-12:00pm PST</fullName>
            </value>
            <value>
                <fullName>9:30-11:00am EST</fullName>
            </value>
            <value>
                <fullName>11:30- 1:00pm EST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>